src/test/ui/feature-gates/feature-gate-custom_test_frameworks.rs
#![test_runner(main)] //~ ERROR custom test frameworks are an unstable feature

#[test_case] //~ ERROR custom test frameworks are an unstable feature
fn f() {}

fn main() {}
